added surprise page

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 </head>
 
 <body>
-<div class="titles">
-  <h1>Hey Lovie,</h1>
-  <h2>Wanna be my Valentine?</h2>
-</div>
-  <img class="home-image" src="images/us.jpg" alt=""><br>
-<div class="answers">
-  <a href='goodJob.html'>Yerr</a>
-  <a href='wrongAnswer.html'>Nada</a>
-</div>
-
-  <script src="index.js" charset="utf-8"></script>
-</body>
+  <div class="bg">
+    <div class="titles">
+      <h1>Hey Lovie,</h1>
+      <h2>Wanna be my Valentine?</h2>
+    </div>
+    <a href="surprise.html">
+      <img class="home-image" src="images/us.jpg" alt=""><br>
+    </a>
+    <div class="answers">
+      <a href='goodJob.html'>Yerr</a>
+      <a href='wrongAnswer.html'>Nada</a>
+    </div>
+  </div>
 
 </html>
