--- a/wrongAnswer.html
+++ b/wrongAnswer.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&family=Yellowtail&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>SMH my head, how did I know you would choose this!</h1>
+    <h1>SMH my head, how did I know you would choose this! <br>You'r Bad!</h1>
     <h2>Anyways, this is the wrong answer as you can tell by the link</h2>
     <h2>Go back to the home page and try again smh (click the gif)</h2>
     <a class = 'noshow' href="index.html">
