--- a/surprise.html
+++ b/surprise.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="surprise.css">
   </head>
   <body>
-    <h1>A surprise</h1>
+    <div class="container">
+      <!-- <p>What's something that I love to remember about us?</p>
+      <p>maybe our first kiss?</p> -->
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in lacinia ligula. Ut convallis dui enim, at cursus magna laoreet nec. Aenean tortor nisi, auctor ut placerat id, vulputate a purus. Aenean a finibus tellus. Integer congue lorem vitae sem efficitur, id molestie tortor ultricies. Nulla ac dolor ut mauris ornare elementum sed eget nunc. Vivamus sapien urna, euismod quis interdum sit amet, laoreet sed lorem. Nullam ut molestie nisi. Pellentesque tristique ligula ac sapien rutrum rhoncus. Donec vulputate, nisi non porttitor feugiat, quam enim fringilla sapien, et tempus leo elit in mi. Quisque aliquet libero ac nunc fringilla, a consectetur tortor auctor. Donec varius metus eget facilisis varius. Morbi euismod convallis ligula quis aliquam. Duis dapibus dignissim bibendum. Nulla facilisi. Donec fermentum auctor massa vitae pharetra.
+
+Fusce quis odio ut lectus accumsan consectetur. Morbi scelerisque libero vel dolor elementum facilisis. Donec neque urna, semper sed ipsum ut, tincidunt mattis turpis. Sed luctus felis sed augue sodales tempus. Donec odio sapien, porttitor eu faucibus non, facilisis nec lectus. Curabitur rutrum euismod commodo. Integer maximus, tellus id bibendum viverra, enim nisl pharetra metus, sed ultricies mauris justo nec tellus. Ut vel laoreet lacus. Nunc tristique felis sit amet arcu viverra, ac sagittis velit pharetra. Quisque ornare odio eu ipsum ultrices bibendum. </p>
+      <div class="parallax">
+      </div>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in lacinia ligula. Ut convallis dui enim, at cursus magna laoreet nec. Aenean tortor nisi, auctor ut placerat id, vulputate a purus. Aenean a finibus tellus. Integer congue lorem vitae sem efficitur, id molestie tortor ultricies. Nulla ac dolor ut mauris ornare elementum sed eget nunc. Vivamus sapien urna, euismod quis interdum sit amet, laoreet sed lorem. Nullam ut molestie nisi. Pellentesque tristique ligula ac sapien rutrum rhoncus. Donec vulputate, nisi non porttitor feugiat, quam enim fringilla sapien, et tempus leo elit in mi. Quisque aliquet libero ac nunc fringilla, a consectetur tortor auctor. Donec varius metus eget facilisis varius. Morbi euismod convallis ligula quis aliquam. Duis dapibus dignissim bibendum. Nulla facilisi. Donec fermentum auctor massa vitae pharetra.
+
+Fusce quis odio ut lectus accumsan consectetur. Morbi scelerisque libero vel dolor elementum facilisis. Donec neque urna, semper sed ipsum ut, tincidunt mattis turpis. Sed luctus felis sed augue sodales tempus. Donec odio sapien, porttitor eu faucibus non, facilisis nec lectus. Curabitur rutrum euismod commodo. Integer maximus, tellus id bibendum viverra, enim nisl pharetra metus, sed ultricies mauris justo nec tellus. Ut vel laoreet lacus. Nunc tristique felis sit amet arcu viverra, ac sagittis velit pharetra. Quisque ornare odio eu ipsum ultrices bibendum. </p>
+    </div>
   </body>
 </html>
